1.23/08-dasboard/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: system-ingress
  tls:
    - hosts:
        - dash.k.erusnikov.ru
  rules:
    - host: dash.k.erusnikov.ru
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443

#    - host: dash.k.erusnikov.ru
#      http:
#        paths:
#          - pathType: Prefix
#            path: /
#            backend:
#              service:
#                name: kubernetes-dashboard
#                port:
#                  number: 80
